# ETL

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
movies_admin/: requirements.txt
movies_admin/api/: urls.py
movies_admin/api/v1/: urls.py  views.py
movies_admin/config/: urls.py
movies_admin/config/settings/: base.py
movies_admin/movies/: admin.py  models.py  signals.py
movies_admin/movies/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf  site.conf
postgres_to_es/: Dockerfile  backoff.py  config.json  config_reader.py  etl.py  postgres_query.sql  requirements.txt  state.json  state.py  test_etl.py  test_state.py
postgres_to_es/movie/: config.json
postgres_to_es/movies/: config.json  movies_query.py  postgres_query.sql
postgres_to_es/queries/: movies_query.py
schema_design/: db_schema.sql
sqlite_to_postgres/: load_data.py  schemas.py
tests/: etl_tests.json
