[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
psycopg2 = "^2.9.1"
Django = "3.2"
django-debug-toolbar = "2.2"
gunicorn = "20.0.4"
psycopg2-binary = "2.9.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
